[package]
name = "sniper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
futures-util = "0.3.30"
reqwest = { version = "0.11.24", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
solana-client = "2.0.4"
solana-sdk = { version = "2.0.4", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
dotenv = "0.15.0"
log = "0.4"
solana-transaction-status = "2.0.4"
colored = "2.1.0"
teloxide = { version = "0.12", features = ["macros"] }
solana-account-decoder = "2.0.4"
spl-token = "6.0.0"
spl-token-client = "0.11.0"
spl-associated-token-account = "4.0.0"
byteorder = "1.4"
arrayref = "0.3"
base64 = "0.22.1"
futures = "0.3.30"
regex = "1.10.4"
chrono = "0.4.37"
bs58 = "0.5.1"
borsh = "1.5.1"
fern = { version = "0.6.2", features = ["colored"] }
